# roadtoussuri

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  event_gen_agent.py  game_loop.py  gm_judge_agent.py  llm_client.py  narrator_agent.py  setup_agents.py  skills.py  skills_cli.py
cli/: __init__.py  display.py  main.py
config/: game_config.yaml  prompts.yaml
deploy/: deploy_cloud_run.sh  run_local.sh
docs/: ARCHITECTURE.md  DEPLOY.md
mcp_server/: __init__.py  config_loader.py  db.py  events.py  mechanics.py  server.py  state.py
tests/: conftest.py  test_agents.py  test_config.py  test_events.py  test_mechanics.py  test_server.py  test_skills.py  test_state.py  test_web.py
web/: __init__.py  app.py  serve.py
web/static/: index.html
