[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "road-to-ussuri"
version = "1.0.0"
description = "LLM-driven Oregon Trail clone — переселение из Благовещенска во Владивосток, 1885."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pyyaml>=6.0",
    "groq>=0.5.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
adk = ["google-adk>=0.1.0", "litellm>=1.40.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
rtu = "cli.main:cli"
agents-cli = "agents.skills_cli:cli"
rtu-web = "web.serve:main"

[tool.setuptools]
packages = ["mcp_server", "agents", "cli", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
